--- a/contato.html
+++ b/contato.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/images/ciencia.png">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Contato</title>
 </head>
 <body>
     <nav>
-        <div>
-            <img src="assets/images/bruno.jpg" alt="Foto do criador deste conteúdo">
+        <div class="logo">
+            <img class="icone" src="assets/images/bruno.jpg" alt="Foto do criador deste conteúdo">
         </div>
         <ul>
             <li>
@@ -20,26 +22,62 @@
             </li>
         </ul>
     </nav>
-    <main>
-        <div>
-            <h1>Entre em contato comigo</h1>
-        </div>
-        
-        <form>
-            <label for="nome">Nome: </label> <br>
-            <input type="text" id="nome">
-            <br>
-            <br>
-            <label for="email">Email: </label> <br>
-            <input type="email" id="email">
-            <br>
-            <br>
-            <label for="assunto">Assunto: </label>
-            <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-            <br>
-            <br>
-            <button>Enviar</button>
-        </form>
+    <main id="contato"> 
+        <section id="formulario_mensagem">
+            <h3>Contato</h2>
+                <form>
+                    <div class="campos-form">
+                        <label for="nome">Nome:</label>
+                        <input id="nome" name="nome" type="text"
+                            placeholder="Insira o seu nome completo">
+                        <div id="txtNome"></div>
+                    </div>
+
+                    <div class="campos-form">
+                        <label for="email">E-mail:</label>
+                        <input id="email" name="email" type="text"
+                            placeholder="Insira o seu e-mail">
+                        <div id="txtEmail"></div>
+                    </div>
+
+                    <div class="campos-form">
+                        <label for="mensagem">Mensagem:</label>
+                        <textarea id="mensagem" name="mensagem" rows="8"
+                            placeholder="Deixe sua mensagem..."></textarea>
+                        <div id="txtMensagem"></div>
+                    </div>
+
+                    <button type="button">
+                        Enviar
+                    </button>
+
+
+                </form>
+        </section>
+
+        <h2 id="localizacao">Endereço:</h2>
+
+        <p>Av. Paulista, 1000</p>
+        <p>São Paulo - SP</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.
+        0980318204333!2d-46.6519376!3d-23.5649224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+        1!3m3!1m2!1s0x94ce5994f2e15a7d%3A0xdeb92126793e5e90!2sAv.%20Paulista%2C%201000%20-
+        %20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr
+        !4v1686151422937!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" 
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
+
+    <footer>
+        <div class="redes_sociais">
+            <a href="https://www.linkedin.com/in/bruno-ferreira-500604240/">
+                <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+            </a>
+            <a href="https://www.github.com/brunoo-lcf">
+                <img class="icons" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" alt="GitHub">
+            </a>
+        </div>
+        <p class="by">Desenvolvido por Bruno Ferreira - 2023 &copy;</p>
+    </footer>
 </body>
 </html>
