--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/images/ciencia.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Contato</title>
+    <title>Portifólio</title>
 </head>
 <body>
     <nav>
@@ -28,26 +28,26 @@
                 <form>
                     <div class="campos-form">
                         <label for="nome">Nome:</label>
-                        <input id="nome" name="nome" type="text"
+                        <input onkeyup="validarNome()" id="nome" name="nome" type="text"
                             placeholder="Insira o seu nome completo">
                         <div id="txtNome"></div>
                     </div>
 
                     <div class="campos-form">
                         <label for="email">E-mail:</label>
-                        <input id="email" name="email" type="text"
+                        <input onkeyup="validarEmail2()" id="email" name="email" type="text"
                             placeholder="Insira o seu e-mail">
                         <div id="txtEmail"></div>
                     </div>
 
                     <div class="campos-form">
                         <label for="mensagem">Mensagem:</label>
-                        <textarea id="mensagem" name="mensagem" rows="8"
+                        <textarea onkeyup="validarMensagem()" id="mensagem" name="mensagem" rows="8"
                             placeholder="Deixe sua mensagem..."></textarea>
                         <div id="txtMensagem"></div>
                     </div>
 
-                    <button type="button">
+                    <button type="button" onclick="enviarForm()">
                         Enviar
                     </button>
 
@@ -79,5 +79,7 @@
         </div>
         <p class="by">Desenvolvido por Bruno Ferreira - 2023 &copy;</p>
     </footer>
+
+    <script src="assets/js/sricpt.js"></script>
 </body>
 </html>
